Prevent jumping when menu overlay is open.

--- a/wp-content/themes/n1_durable_goods/assets/src/scss/modules/_header.scss
+++ b/wp-content/themes/n1_durable_goods/assets/src/scss/modules/_header.scss
@@ -90,6 +90,8 @@
         grid-template-columns: 110px 1fr auto;
         align-content: center;
         align-items: var(--sections-align-items);
+        // prevent jumping when menu is open
+        transition: none;
 
         #nav-actions {
             grid-area: actions;
